--- a/parse-server/package.json
+++ b/parse-server/package.json
@@ -20,7 +20,7 @@
     "v8-profiler": "^5.7.0"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "npm node index.js"
   },
   "engines": {
     "node": ">=4.3"
