PARSE SERVER: Change necessary modules to run parse-server

--- a/.env.sample
+++ b/.env.sample
@@ -2,8 +2,9 @@ DB_PORT=27017
 PS_PORT=1337
 APP_ID=appid
 MASTER_KEY=mkey
+SERVER_URL=http://localhost:1337/parse
 DATABASE_URI=mongodb://mongo/test
 VERBOSE=1
 DASHBOARD_PORT=4040
-DASHBOARD_MOUNT=parse-dashboard
 MONGO_DB_DATA_PATH=./mongo/data
+DASHBOARD_PSWD=<DASHBOARD_PSWD>
