--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,10 @@ services:
     ports:
      - ${DASHBOARD_PORT}:${DASHBOARD_PORT}
     environment:
-     - MOUNT_PATH=${DASHBOARD_MOUNT}
+     - APP_ID=${APP_ID}
+     - SERVER_URL=${SERVER_URL}
+     - MASTER_KEY=${MASTER_KEY}
+     - ADMIN_PSWD=${DASHBOARD_PSWD}
+     - PORT=${DASHBOARD_PORT}
     depends_on: 
      - parse-server
